TOC plugin: overflow was not plugin's fault but incorporated fix

--- a/src/table-of-contents-plugin/plugin.scss
+++ b/src/table-of-contents-plugin/plugin.scss
@@ -36,6 +36,14 @@
     color: var(--paragraphMediumColor);
 }
 
+@media screen and (max-width: 767px) {
+
+    html,
+    body {
+        overflow-x: hidden;
+    }
+}
+
 html {
     scroll-behavior: smooth
 }
